--- a/responsive.css
+++ b/responsive.css
@@ -36,7 +36,7 @@
 		width:70%;
 		padding: 10px;
 	}
-	.card  img {
+	.card2  img {
 	width: 30vw;}
 	.title{
 		padding: 5px;
@@ -54,12 +54,17 @@
 	.offer{
 		margin: 5px;
 	}
+	.card {
+		width:70vw;
+		margin-left: 10vw;
+	}
 
 
 }
 
 
 @media only screen and (max-width: 800px) {
+
 
   .banner p{
   	font-size: 15px;
@@ -86,6 +91,7 @@
 }
 
 @media only screen and (max-width: 1100px) {
+
   .banner{
 
   	width: 25vw;
@@ -168,8 +174,15 @@
 @media only screen and (max-width: 400px) {
 	.the_list p{
 		font-size: 13px;
+	}
+	.banner p{
+	color: white;
+	font-size: 10px;}
+	.banner{
+		width: 30vw;
+		margin-left: 70vw;
+	}
 
 
-}
 
 }
